fix overflow issue

--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
 
 body {
     font-family: monospace;
-    width: 100%;
+    /* width: 100%; */
     font-size: 12px;
 }
 
